# yaps-rs

./: Cargo.toml  LICENSE  README.md  release.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
crates/yaps-cli/: Cargo.toml
crates/yaps-cli/src/: main.rs
crates/yaps-core/: Cargo.toml
crates/yaps-core/benches/: hashing_bench.rs  scanning_bench.rs
crates/yaps-core/src/: config.rs  error.rs  lib.rs  report.rs
crates/yaps-core/src/exif/: date.rs  fields.rs  mod.rs  reader.rs
crates/yaps-core/src/hash/: hasher.rs  mod.rs  store.rs
crates/yaps-core/src/ops/: conflict.rs  file_op.rs  mod.rs  organizer.rs  scanner.rs
crates/yaps-core/src/pattern/: formatter.rs  mod.rs  parser.rs  tags.rs
crates/yaps-gui/: Cargo.toml
crates/yaps-gui/src/: app.rs  main.rs  messages.rs  settings.rs
src/: lib.rs
tests/: duplicate_test.rs  pattern_test.rs  sorting_test.rs
tests/common/: mod.rs
