[workspace]
members = [
    "crates/yaps-core",
    "crates/yaps-cli",
    "crates/yaps-gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/example/yaps-rs"

[workspace.dependencies]
# Core
kamadak-exif = "0.6"
blake3 = "1"
rayon = "1.10"
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization / config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"

# GUI
iced = { version = "0.13", features = ["tokio"] }

# Testing
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
