[package]
name = "yaps-cli"
description = "CLI binary for YAPS-RS photo sorter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "yaps"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
yaps-core = { path = "../yaps-core" }
clap = { workspace = true }
indicatif = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
