[package]
name = "yaps-core"
description = "Core library for YAPS-RS photo sorter — EXIF parsing, pattern formatting, hashing, and file operations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
kamadak-exif = { workspace = true }
blake3 = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hashing_bench"
harness = false

[[bench]]
name = "scanning_bench"
harness = false
