[package]
name = "yaps-gui"
description = "GUI binary for YAPS-RS photo sorter (iced)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "yaps-gui"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
yaps-core = { path = "../yaps-core" }
iced = { workspace = true }
tokio = { version = "1", features = ["sync"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rfd = "0.15"
dirs = "5"
serde = { workspace = true }
toml = { workspace = true }
